# portugapt.github.io

./: .git-commits.yaml  .gitignore  .pre-commit-config.yaml  Gemfile  README.md  _config.yml  blog.html  categories.html  compile.config.json  compile.config.toml  curriculumvitae.html  generate_site.py  hey.json  index.html  justfile  package-lock.json  package.json  print.html  pyproject.toml  result.txt  results.txt  tailwind.config.js  test_file.json  test_prepare_blogpost_view_model.json
.devcontainer/: devcontainer.json
_data/: cvdata.yml  labels.yaml
_includes/: collection_by_tag.html  collection_sorted_date.html  labels_blog.html  search_placeholder_custom.html  tags_info.html
_layouts/: cv_default.html  post.html
_posts/: 2023-02-20-welcome-to-jekyll.markdown  2023-02-21-a-new-beginning copy.md  2023-02-22-a-new-beginning copy 3.md  2023-02-23-a-new-beginning copy 2.md  2023-02-23-a-new-beginning.md
_sass/: _cvdefault.scss
assets/: (blog).page-B6ofwjHE.js  (blog).page-BQsz5ZHn.js  (blog).page-BhLm0IHH.js  (blog).page-C-6FiWKq.js  (blog).page-D7re5U9P.js  (blog).page-DBpxMI7L.js  (blog).page-DKvImpI1.js  (blog).page-DMD_6Vlf.js  (home).page-CN1vfwuY.js  (home).page-ClFBssZn.js  (home).page-f7XzHRU8.js  (home).page-rFv2ynY1.js  _slug_.page-BD56Zetu.js  _slug_.page-BbEj7-xs.js  _slug_.page-CHZPEnmj.js  _slug_.page-CYkXA_Cd.js  _slug_.page-DYHAuHgy.js  _slug_.page-Dso-J5c-.js  _slug_.page-H46wnepB.js  _slug_.page-JT5cW-fh.js  about-C-EdLARA.js  index-B8bmTjEg.js  index-BBWyIIn4.css  index-BM83vsko.js  index-BPbFJ4oG.js  index-Bh5DTJ71.css  index-CPLpPlRx.js  index-CTez7Rbs.css  index-CYlNoTnJ.js  (+16 more)
(+244 files in other folders)
